Creado mediante Colaboratory

--- a/IO1_Prueba_Thomas.ipynb
+++ b/IO1_Prueba_Thomas.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyMYL5DMWhcj0lQfL7fX+yaY",
+      "authorship_tag": "ABX9TyOJiZ+YqacEi183Ie7orX+e",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,8 +52,7 @@
       "cell_type": "code",
       "source": [
         "#Import Library\n",
-        "import cvxpy as cp\n",
-        "import matplotlib.pyplot as plt\n"
+        "import cvxpy as cp"
       ],
       "metadata": {
         "id": "21kbv4LyQA3F"
@@ -94,15 +93,6 @@
       ],
       "metadata": {
         "id": "O5CVWp0zXUU_"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "sd6u1zIBr3KM"
       },
       "execution_count": null,
       "outputs": []
